--- a/iterwrite/templates/login.html
+++ b/iterwrite/templates/login.html
@@ -50,7 +50,7 @@
 	</head>
 	<body>
         <div style="margin: 25vh 10vw;">
-            <h2 class="medium">the twenty-first-century writing <span id="workshop">&nbsp;workshop</span></h2>
+            <h2 class="medium">the twenty-first-century writing <span id="workshop">workshop</span></h2>
             <h1 class="large">iter<span id="w">(w)</span>rite</h1>
             <div id="forms">
                 <div class="input-group">
