added login error message

--- a/iterwrite/templates/login.html
+++ b/iterwrite/templates/login.html
@@ -84,6 +84,9 @@
                     </div>
                     <input class="btn btn-primary" type="submit" value="Register">
                 </form>
+                {% if message %}
+                    <div class="alert-danger">{{ message }}</div>
+                {% endif %}
             </div>
         </div>
 
