--- a/iterwrite/templates/index.html
+++ b/iterwrite/templates/index.html
@@ -5,7 +5,7 @@
 
     
     {% if my_paper %}
-    <div id="piece-header" class="shadow-sm">
+    <div id="piece-header" class="main shadow-sm">
         <div class="doc">
             <h2 id="title">{{ my_paper.title }}<a style="color: white; text-decoration: none; font-size: medium;" href="{% url 'profile' my_paper.author.username %}">- {{ my_paper.author.username }}</a>
             </h2>
