--- a/iterwrite/templates/login.html
+++ b/iterwrite/templates/login.html
@@ -49,7 +49,7 @@
         </script>
 	</head>
 	<body>
-        <div style="margin: 25vh 10vw;">
+        <div id="login-page" class='container-fluid'>
             <h2 class="medium">the twenty-first-century writing <span id="workshop">workshop</span></h2>
             <h1 class="large">iter<span id="w">(w)</span>rite</h1>
             <div id="forms">
