--- a/iterwrite/templates/layout.html
+++ b/iterwrite/templates/layout.html
@@ -17,6 +17,7 @@
 		
         <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
         <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+        
 
         <link href="static/main.css" rel="styleSheet">
 
@@ -97,7 +98,7 @@
                                 <input class="form-control" type="text" name="title" placeholder="Title">
                                 <input class="form-control" type="file" name="document">
                                 <div class="input-group" style="width: 100%;">
-                                    <button type="submit" class="form-control btn btn-primary" type="submit" class="btn btn-primary"><i class="fas fa-file-upload"></i> Upload</button>
+                                    <button type="submit" class="form-control btn btn-primary" type="submit" class="btn btn-primary"><i class="fas fa-file-upload"></i> Upload (.docx)</button>
                                 </div>
                             </form>
                             <br>
